# mcp_mysql

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: app.py
src/yooztech_mcp_mysql.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
