[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yooztech_mcp_mysql"
version = "0.1.1"
description = "MCP server for MySQL (read-only, database-scoped)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "mcp>=1.2.0",
  "mysql-connector-python>=9.0.0",
]

[project.scripts]
yooztech_mcp_mysql = "app:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["app"]

